# rc-car-sim-rig

./: .gitignore  Cargo.toml
.github/workflows/: build.yml
common_data/: Cargo.toml
common_data/src/commands/: movement.rs
common_data/src/server/: http.rs  mod.rs
common_data/src/server/data/: jwt_claims.rs  mod.rs  telementry.rs
common_data/src/server/json/: http.rs
rc_car/: Cargo.toml
server/: .env.example  Cargo.toml  discord-counter.db
server/migrations/: 20240308082059_init.sql
server/src/: main.rs
server/src/data/: httpstate.rs  mod.rs  state.rs  udpstruct.rs  userauthstruct.rs
server/src/lib/: auth.rs
server/src/repo/database/: base.rs  mod.rs  postgres.rs  sqlite.rs
server/src/repo/handlers/: mod.rs  udphandler.rs
server/src/repo/http/: index.rs
server/src/repo/http/auth/: email.rs
server/src/repo/http/user/: cars.rs
