[package]
name = "common_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
email_address = "0.2.4"
jsonwebtoken = "9.3.0"
reqwest = "0.11.24"
serde = {version = "1.0.197",features = ["derive"]}
serde_json = "1.0.11"
