[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common_data = { path = "../common_data/"}
tokio = {version = "1.36.0", features = ["full"]}
sqlx = {version = "0.7.2", features = ["sqlite", "runtime-tokio-native-tls"]}
dotenvy = "0.15.7"
actix-web = "4.5.1"
