[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common_data = { path = "../common_data/"}
tokio = {version = "1.36.0", features = ["full"]}
sqlx = {version = "0.7.4", features = ["sqlite", "runtime-tokio-native-tls"]}
dotenvy = "0.15.7"
actix-web = "4.5.1"
jsonwebtoken = "9.2.0"
email_address = "0.2.4"
rand = "0.8.5"
lettre = "0.11.4"
chrono = "0.4.35"
serde = "1.0.197"
serde_json = "1.0.114"
bcrypt = "0.15.1"
uuid = { version = "1.8.0", features = ["v4"] }
